jest_health_out.txt
FAIL tests/integration/health.test.ts
  ● Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     • If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
     • If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
     • To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
     • If you need a custom transformation, specify a "transform" option in your config.
     • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    C:\Users\EMMA\Desktop\callora\src\generated\prisma\client.ts:52
    globalThis['__dirname'] = path.dirname((0, node_url_1.fileURLToPath)(import.meta.url));
                                                                                ^^^^

    SyntaxError: Cannot use 'import.meta' outside a module

    [0m[31m[1m>[22m[39m[90m 1 |[39m [36mimport[39m { [33mPrismaClient[39m } [36mfrom[39m [32m'../generated/prisma/client.js'[39m[33m;[39m
     [90m   |[39m [31m[1m^[22m[39m
     [90m 2 |[39m [36mimport[39m { [33mPrismaPg[39m } [36mfrom[39m [32m'@prisma/adapter-pg'[39m[33m;[39m
     [90m 3 |[39m
     [90m 4 |[39m [36mlet[39m prisma[33m:[39m [33mPrismaClient[39m[33m;[39m[0m

      at Runtime.createScriptFromCode (node_modules/jest-runtime/build/index.js:1318:40)
      at Object.<anonymous> (src/lib/prisma.ts:1:1)
      at Object.<anonymous> (src/repositories/userRepository.ts:1:1)
      at Object.<anonymous> (src/routes/admin.ts:3:1)
      at Object.<anonymous> (src/app.ts:3:1)
      at Object.<anonymous> (tests/integration/health.test.ts:12:1)

Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        1.894 s
Ran all test suites matching tests/integration/health.test.ts.
